provider-service/provider-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider-app
  labels:
    app: provider-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: provider-app
  template:
    metadata:
      labels:
        app: provider-app
    spec:
      containers:
      - name: provider-app
        image: sanyasony8/provider-service
        ports:
        - containerPort: 7000
