provider-service/provider-app-service.yml
kind: Service
apiVersion: v1
metadata:
  name: provider-app-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 7000
      name: http
  selector:
    app: provider-app
  type: NodePort
