provider-service/provider-app.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: provider-app
  labels:
    app: provider-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: provider-app
  template:
    metadata:
      labels:
        app: provider-app
    spec:
      containers:
      - name: provider-app
        image: sanyasony8/provider-service
        ports:
        - containerPort: 7000
---
kind: Service
apiVersion: v1
metadata:
  name: provider-app-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 7000
      name: http
  selector:
    app: provider-app
  type: NodePort
